# MPJ

./: .gitignore  CMakeLists.txt  README.md  bcc_generate.py  compile_c.sh  convert_to_xyz.py  eq.sbatch  generate_bcc.py  generate_coord.py  generate_coord2.py  get_L_N.py  grid.py  indices.py  input.py  lapace.c  laplace.c  linkedcell.py  loggers.py  main_Maze.py  main_Maze_md.py  output.py  output_md.py  particle.py  plot_T_E_tot.py  plot_force.py  profiling.py  pyproject.toml  restart.py  restart_anywhere.py  run_command.sh  run_command_md.sh  setup.py  spline_analysis.py  verlet.py
Outputs/: energy_N100.csv  energy_N20.csv  field_N100.csv  performance_N100_1.csv  performance_N100_16.csv  performance_N100_2.csv  performance_N100_32.csv  performance_N100_4.csv  performance_N100_64.csv  performance_N100_8.csv  solute_N100.csv  solute_N20.csv  solute_N40.csv  temperature_N100.csv  temperature_N20.csv  temperature_N40.csv  tot_force_N100.csv  work_N100.csv
examples/: eq.sbatch  eq_N_array.sbatch  eq_nparr.sbatch  eq_run.sbatch  log_temp_28920648.out  log_temp_29132506.out  log_temp_29132508.out  log_threads1_job28920648.out  log_threads1_job29132506.out  log_threads1_job29132508.out  run_Np_L.sh  test_input.yml  test_input_density_1.329.yml  test_input_density_1.379.yml
examples/.sbatch_files/: eq.sbatch  eq_N_array.sbatch
examples/.sh files/: run_Np.sh  run_Np_L.sh  run_command.sh
examples/.yml_files/: test_input_poisson.yml
examples/Outputs/: energy_N100.csv  energy_N40.csv  field_N100.csv  performance_N100.csv  solute_N100.csv  temperature_N100.csv  tot_force_N100.csv
examples/input_files/: input_coord1024.csv  input_coord128.csv  input_coord1458.csv  input_coord216.csv  input_coord250.csv  input_coord432.csv  input_coord686.csv
examples/input_files_bcc/: input_coord1024.csv  input_coord128.csv  input_coord16.csv  input_coord432.csv  input_coord686.csv
examples/input_files_new/: input_coord128.csv  input_coord16.csv  input_coord2.csv  input_coord216.csv  input_coord250.csv  input_coord54.csv
examples/restart_files/: restart_N100_step9999.csv  restart_Np250.csv
examples/restart_files/density_1.379/: restart_N100_N_p=16.csv  restart_N100_N_p=216.csv  restart_N100_N_p=2_iter198.csv  restart_N100_N_p=2_iter199.csv  restart_N100_N_p=2_iter999.csv  restart_N100_N_p_250_19999_iter1.csv  restart_N100_iter-16.csv  restart_N100_iter-817.csv  restart_N100_iter981.csv  restart_N100_iter999.csv  restart_N100_step9999.csv  restart_N120_N_p_432_iter1.csv  restart_N140_N_p_686_iter1.csv  restart_N160_N_p_1024_iter1.csv  restart_N180_N_p_1458_iter1.csv  restart_N80_N_p_128_iter-1.csv  restart_N84_N_p_128_iter4999.csv
input_files/: input_coord2.csv  input_coord250.csv  input_coord64.csv
input_files_bcc/: input_coord2.csv  input_coord250.csv  input_coord54.csv
input_files_new/: input_coord16.csv  input_coord2.csv  input_coord250.csv
maze_poisson/: c_api.py  constants.py  grid.py  indices.py  input.py  loggers.py  output.py  output_md.py  particle.py  particles.py  plot_force.py  profiling.py  restart.py  spline_analysis.py  verlet.py
maze_poisson/cli/: __init__.py  maze.py  plot.py  run.py  utils.py
maze_poisson/cli/analyzers/: analyzers.py
maze_poisson/cli/plotters/: __init__.py  plot_T_E_tot.py  plot_force.py  plot_scaling.py
maze_poisson/cli/runners/: main_Maze.py  main_Maze_md.py
maze_poisson/cli/utilities/: bcc_generate.py  convert_to_xyz.py  generate_bcc.py  get_L_N.py  run_shell_cmd.py
maze_poisson/scripts/: main_Maze.py  main_Maze_md.py
maze_poisson/toclean/: animation.py  main_Maze.py  output.py  spline_analysis.py
test.dSYM/Contents/Resources/DWARF/: test
